# multi-tenant-org-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3acd3716598d_initial_schema.py  566a2159ed12_optimization_timezone_and_indexes.py  d98ef53f6313_add_membership_org_created_index.py
app/: config.py  main.py
app/api/: audit_log.py  auth.py  dependencies.py  item.py  organization.py
app/core/: exceptions.py  security.py  utils.py
app/infrastructure/: database.py
app/infrastructure/llm/: gemini_provider.py  protocol.py
app/models/: __init__.py  audit_log.py  base.py  item.py  membership.py  organization.py  user.py
app/repositories/: audit_log.py  item.py  membership.py  organization.py  user.py
app/schemas/: audit_log.py  auth.py  item.py  organization.py
app/services/: audit_log.py  auth.py  chatbot.py  item.py  organization.py
tests/: conftest.py
tests/integration/: conftest.py  test_audit_log_api.py  test_auth_api.py  test_item_api.py  test_organization_api.py  test_rbac.py
tests/unit/: conftest.py  test_audit_service.py  test_auth_service.py  test_item_service.py  test_organization_service.py  test_security.py
