[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-tenant-org-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "argon2-cffi>=25.1.0",
    "uuid-utils>=0.14.1",
    "google-genai>=1.66.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgres]>=4.14.1",
    "httpx>=0.28.1",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors       (flake8)
    "W",    # pycodestyle warnings     (flake8)
    "F",    # pyflakes                 (flake8)
    "I",    # isort
    "C90",  # mccabe complexity        (flake8-mccabe)
    "N",    # pep8 naming conventions  (flake8-pep8-naming)
    "B",    # common bug patterns      (flake8-bugbear)
    "PLC",  # pylint convention
    "PLE",  # pylint error
    "PLR",  # pylint refactor
    "PLW",  # pylint warning
]
ignore = [
    "PLR0913",  # too many arguments — common in FastAPI deps/routes
    "B008",     # Depends() in defaults — core FastAPI DI pattern
    "PLR2004",  # magic values — HTTP status codes are self-documenting
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["PLC0415"]  # intentional lazy import of testcontainers

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "fastapi", "third-party", "first-party", "local-folder"]
known-first-party = ["app"]

[tool.ruff.lint.isort.sections]
"fastapi" = ["fastapi", "uvicorn", "starlette"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"
